--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang = "en" dir="rtl">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
-        <meta name="description" content="This is the homepage of Techium.">
+        <meta name="description" content="Techium is a digital agency">
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
         <link rel="icon" href="./favicon.png" type="image/png">
     </head>
@@ -88,6 +88,6 @@
                 </h2>
             </section>
         </main>
-        <footer>Footer</footer>
+        <footer> Footer </footer>
     </body>
 </html>
