--- a/html_advanced/10-index.html
+++ b/html_advanced/10-index.html
@@ -1,27 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="UTF-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
         <meta name="description" content="Techium is a digital agency">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-        <link rel="icon" href="./favicon.png" type="image/png">
+        <link rel="icon" type="image/x-icon" href="./favicon.ico">
+        <link rel="icon" type="image/png" href="./favicon.png">
     </head>
     <body>
         <header>
-            <nav>
-
-            </nav>
+            <nav></nav>
         </header>
         <main>
-            <h1>
-                Homepage
-            </h1>
+            <h1>Homepage</h1>
             <section>
-                <h2>
-                    We help you build your brand!
-                </h2>
+                <h2>We help you build your brand!</h2>
             </section>
             <section>
                 <h2>Services</h2>
@@ -34,15 +28,15 @@
             </section>
             <section>
                 <h2>Works</h2>
-                <article>
-                    <h3>Interior Design</h3>
-                </article>
-                <article>
-                    <h3>Web Development</h3>
-                </article>
-                <article>
-                    <h3>Personal Brand</h3>
-                </article>
+                    <article>
+                        <h3>Interior Design</h3>
+                    </article>
+                    <article>
+                        <h3>Web Development</h3>
+                    </article>
+                    <article>
+                        <h3>Personal Brand</h3>
+                    </article>
             </section>
             <section>
                 <h2>About Us</h2>
@@ -52,42 +46,34 @@
             </section>
             <section>
                 <h2>Latest news</h2>
-                <article>
-                    <h3>
-                        Hoc loco tenere se Triarius non potuit
-                    </h3>
-                </article>
-                <article>
-                    <h3>
-                        Ut alios omittam, hunc appello, quem ille unum secutus
-                    </h3>
-                </article>
-                <article>
-                   <h3>
-                        Bestiarum vero nullum iudicium puto
-                   </h3> 
-                </article>
+                    <article>
+                        <h3>Hoc loco tenere se Triarius non potuit.</h3>
+                    </article>
+                    <article>
+                        <h3>Ut alios omittam, hunc appello, quem ille unum secutus est.</h3>
+                    </article>
+                    <article>
+                        <h3>Bestiarum vero nullum iudicium puto.</h3>
+                    </article>
             </section>
             <section>
-                <h2>
-                    Testimonials
-                </h2>
-                <article>
-                    Testimonial 1
-                </article>
-                <article>
-                    Testimonial 2
-                </article>
-                <article>
-                    Testimonial 3
-                </article>
+                <h2>Testimonials</h2>
+                    <article>
+                        Testimonial 1
+                    </article>
+                    <article>
+                        Testimonial 2
+                    </article>
+                    <article>
+                        Testimonial 3
+                    </article>
             </section>
             <section>
-                <h2>
-                    Contact
-                </h2>
+                <h2>Contact</h2>
             </section>
         </main>
-        <footer> Footer </footer>
+        <footer>
+            Footer
+        </footer>
     </body>
 </html>
