--- a/html_advanced/31-index.html
+++ b/html_advanced/31-index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang = "en" dir="rtl">
+<html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Homepage - Techium</title>
-        <meta name="description" content="This is the homepage of Techium.">
+        <meta name="description" content="Techium is a digital agency">
         <link rel="icon" href="./favicon.ico" type="image/x-icon">
         <link rel="icon" href="./favicon.png" type="image/png">
     </head>
     <body>
-        <!--Header-->
+        <!-- Header -->
         <header>
             <div>
                 <a href="/">
@@ -17,37 +17,33 @@
                 </a>
                 <nav>
                     <ul>
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/services">Services</a></li>
-                        <li><a href="/works">Works</a></li>
-                        <li><a href="/about">About</a></li>
-                        <li><a href="/latest_news">Latest news</a></li>
-                        <li><a href="/testimonials">Testimonials</a></li>
-                        <li><a href="/contact">Contact</a></li>
+                        <li><a href="/" title="Home">Home</a></li>
+                        <li><a href="#services" title="Services">Services</a></li>
+                        <li><a href="#works" title="Works">Works</a></li>
+                        <li><a href="#about" title="About">About</a></li>
+                        <li><a href="#latest_news" title="Latest news">Latest news</a></li>
+                        <li><a href="#testimonials" title="Testimonials">Testimonials</a></li>
+                        <li><a href="#contact" title="Contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
-        <!--Main-->
+        <!-- Main -->
         <main>
-            <h1>
-                Homepage
-            </h1>
-            <!--Hero section-->
+            <h1>Homepage</h1>
+            <!-- Hero section -->
             <section>
                 <div>
-                    <h2>
-                        We help you build your brand!
-                    </h2>
+                    <h2>We help you build your brand!</h2>
                     <a href="#">Get started</a>
                 </div>
             </section>
-            <!--Services section-->
+            <!-- Services section -->
             <section>
                 <div>
                     <header>
                         <h2>Services</h2>
-                        <p>work with you</p>
+                        <p>We work with you</p>
                     </header>
                     <div>
                         <h3><a href="#">Design & Concept</a></h3>
@@ -59,7 +55,7 @@
                     </div>
                 </div>
             </section>
-            <!--Works section-->
+            <!-- Works section -->
             <section>
                 <div>
                     <header>
@@ -79,7 +75,7 @@
                     </div>
                 </div>
             </section>
-            <!--About Us section-->
+            <!-- About Us section -->
             <section>
                 <div>
                     <header>
@@ -88,22 +84,16 @@
                     </header>
                     <div>
                         <h3>Who are we</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>How we work</h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <a href="about.html">Learn more about us</a>
                     </div>
                 </div>
             </section>
-            <!--Latest news section-->
+            <!-- Latest news section -->
             <section>
                 <div>
                     <header>
@@ -112,38 +102,30 @@
                     <div>
                         <article>
                             <p>Career</p>
-                            <h3><a href="#">Hoc loco tenere se Triarius non potuit</a></h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                            </p>
-                            <author>By Kelly D.</article>
+                            <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
+                            <small>By Kelly D.</small>
                         </article>
                         <article>
                             <p>Digital Life</p>
-                            <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus</a></h3>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!
-                            </p>
-                            <author>By William A.</article>
+                            <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum mihi Piso: Quid ergo? Tum ille: Ain tandem? Non autem hoc: igitur ne illud quidem. Sed quod proximum fuit non vidit. Nos commodius agimus. An nisi populari fama?</p>
+                            <small>By William A.</small>
                         </article>
                         <article>
                             <p>Social</p>
-                        <h3><a href="#">Bestiarum vero nullum iudicium puto</a></h3>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.
-                        </p>
-                        <author>By Frances J.</article>
+                            <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non igitur bene. Quid enim est a Chrysippo praetermissum in Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia, quae actiones.</p>
+                            <small>By Frances J.</small>
                         </article>
                     </div>
                 </div>
             </section>
-            <!--Testimonials section-->
+            <!-- Testimonials section -->
             <section>
                 <div>
                     <header>
-                        <h2>
-                            Testimonials
-                        </h2>
+                        <h2>Testimonials</h2>
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
@@ -168,46 +150,42 @@
                     </div>
                 </div>
             </section>
-            <!--Contact section-->
+            <!-- Contact section -->
             <section>
                 <div>
                     <header>
-                        <h2>
-                            Contact
-                        </h2>
+                        <h2>Contact</h2>
                         <p>We like to know new people</p>
                     </header>
                     <div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane? 
-                        </p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
                     <a href="contact.html">Get in touch</a>
                 </div>
             </section>
         </main>
-        <!--Footer-->
-            <footer>
-                <address>
-                    234 Washington Street<br>
-                    Urbana, Illinois
-                </address>
-                <div>
-                    <ul>
-                        <li><a href="https://www.facebook.com/HolbertonSchool/">Facebook</a></li>
-                        <li><a href="https://twitter.com/holbertonschool">Twitter</a></li>
-                        <li><a href="https://www.instagram.com/holbertonschool/">Instagram</a></li>
-                    </ul>
-                </div>
-                <hr>
-                <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
-                <div>
-                    <ul>
-                        <li><a href="#">Terms of Use</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                    </ul>
-                </div>
-            </footer>
+        <!-- Footer -->
+        <footer>
+            <address>
+                234 Washington Street<br>
+                Urbana, Illinois
+            </address>
+            <div>
+                <ul>
+                    <li><a href="https://www.facebook.com/HolbertonSchool/" title="Facebook">Facebook</a></li>
+                    <li><a href="https://twitter.com/holbertonschool" title="Twitter">Twitter</a></li>
+                    <li><a href="https://www.instagram.com/holbertonschool/" title="Instagram">Instagram</a></li>
+                </ul>
+            </div>
+            <hr>
+            <p>© 2020 Techium, made with ♥ by students at Holberton School.</p>
+            <div>
+                <ul>
+                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Cookie Policy</a></li>
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
