--- a/html_advanced/18-index.html
+++ b/html_advanced/18-index.html
@@ -114,15 +114,9 @@
                         <p>We are more than a digital company</p>
                     </header>
                     <div>
-                        <article>
-                            Testimonial 1
-                        </article>
-                        <article>
-                            Testimonial 2
-                        </article>
-                        <article>
-                            Testimonial 3
-                        </article>
+                        <article>Testimonial 1</article>
+                        <article>Testimonial 2</article>
+                        <article>Testimonial 3</article>
                     </div>
                 </div>
             </section>
@@ -141,9 +135,7 @@
         </main>
         <!-- Footer -->
         <footer>
-            <div>
-                Footer
-            </div>
+            <div>Footer</div>
         </footer>
     </body>
 </html>
